projects/observability/src/pages/explorer/explorer.component.scss
@import 'font';

.explorer-container {
  display: flex;
  flex-direction: column;
  padding: 24px;
  height: calc(100% - 40px);

  .filter-bar {
    margin-top: 16px;
  }

  .panel-title {
    color: black;
  }

  .visualization-panel {
    padding-top: 8px;
    .label {
      @include body-1-medium;
    }

    .visualization-panel-content {
      .visualization-dashboard {
        display: block;
        height: 224px;
      }
    }
  }

  .results-panel {
    overflow: hidden;
    flex: 1 1 auto;
    .label {
      @include body-1-medium;
    }

    .results-panel-content {
      margin-top: 12px;
    }
  }
}

